--- a/defconfig/odroid_defconfig
+++ b/defconfig/odroid_defconfig
@@ -540,7 +540,7 @@ CONFIG_MPLS_IPTUNNEL=m
 CONFIG_HSR=m
 CONFIG_CGROUP_NET_PRIO=y
 CONFIG_BPF_STREAM_PARSER=y
-CONFIG_NET_PKTGEN=m
+# CONFIG_NET_PKTGEN is not set
 CONFIG_HAMRADIO=y
 CONFIG_AX25=m
 CONFIG_NETROM=m
@@ -883,8 +883,8 @@ CONFIG_ETHOC=m
 # CONFIG_NET_VENDOR_SOCIONEXT is not set
 CONFIG_STMMAC_ETH=y
 CONFIG_STMMAC_PLATFORM=m
-CONFIG_DWMAC_DWC_QOS_ETH=m
-CONFIG_DWMAC_LOONGSON=m
+# CONFIG_DWMAC_DWC_QOS_ETH is not set
+# CONFIG_DWMAC_LOONGSON is not set 
 CONFIG_STMMAC_PCI=m
 # CONFIG_NET_VENDOR_SUN is not set
 # CONFIG_NET_VENDOR_SYNOPSYS is not set
