--- a/defconfig/amlogic_defconfig
+++ b/defconfig/amlogic_defconfig
@@ -539,7 +539,7 @@ CONFIG_MPLS_IPTUNNEL=m
 CONFIG_HSR=m
 CONFIG_CGROUP_NET_PRIO=y
 CONFIG_BPF_STREAM_PARSER=y
-CONFIG_NET_PKTGEN=m
+# CONFIG_NET_PKTGEN is not set
 CONFIG_HAMRADIO=y
 CONFIG_AX25=m
 CONFIG_NETROM=m
