--- a/defconfig/bcm2711_defconfig
+++ b/defconfig/bcm2711_defconfig
@@ -406,7 +406,7 @@ CONFIG_NET_ACT_CSUM=m
 CONFIG_BATMAN_ADV=m
 CONFIG_OPENVSWITCH=m
 CONFIG_CGROUP_NET_PRIO=y
-CONFIG_NET_PKTGEN=m
+# CONFIG_NET_PKTGEN is not set
 CONFIG_HAMRADIO=y
 CONFIG_AX25=m
 CONFIG_NETROM=m
