Linux: `userdata.txt`
KBUSER=""
KBHOST=""
https://www.kernel.org/doc/html/latest/kbuild/kbuild.html#kbuild-build-user-kbuild-build-host

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -88,7 +88,9 @@ echo verbose=0 >> tmp0
 echo auto=1 >> tmp0
 echo aircrack=0 >> tmp0
 echo CFLAGS='"''"' >> tmp0
-echo builder=2.7 >> tmp0
+echo KBUSER='"'marvin'"' >> tmp0
+echo KBHOST='"'martian'"' >> tmp0
+echo builder=2.8 >> tmp0
 echo '"' > tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
@@ -121,7 +123,8 @@ sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
 sed -i '18i### WIRELESS' userdata.txt
 sed -i '22i### CUSTOM' userdata.txt
 sed -i '29i### COMPILER TUNING' userdata.txt
-sed -i '31i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '31i### WHOAMI AND HOST' userdata.txt
+sed -i '34i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # clear screen
 clear
