--- a/defconfig/odroid_defconfig
+++ b/defconfig/odroid_defconfig
@@ -2521,7 +2521,7 @@ CONFIG_TMP007=m
 CONFIG_TSYS01=m
 CONFIG_TSYS02D=m
 CONFIG_MAX31856=m
-# CONFIG_PWM_GPIO= not set
+CONFIG_PWM_GPIO=y
 CONFIG_PWM_MESON=y
 CONFIG_PHY_XGENE=y
 CONFIG_PHY_CADENCE_SIERRA=m
