`Debian Image Builder`
Nameserver variables added to the userdata.txt file

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -104,7 +104,9 @@ echo "set_timezone(){" >> tmp0
 echo "ln -snf /usr/share/zoneinfo/America/New_York /etc/localtime" >> tmp0
 echo "echo -n 'America/New_York' > /etc/timezone" >> tmp0
 echo "}" >> tmp0
-echo builder=3.0 >> tmp0
+echo 'NAMESERVER1="8.8.8.8"' >> tmp0
+echo 'NAMESERVER2="8.8.4.4"' >> tmp0
+echo builder=3.1 >> tmp0
 echo '"' > tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
@@ -138,7 +140,8 @@ sed -i '30i### COMPILER TUNING' userdata.txt
 sed -i '32i### WHOAMI AND HOST' userdata.txt
 sed -i '35i### LOCALES' userdata.txt
 sed -i '43i### TIMEZONE' userdata.txt
-sed -i '48i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '48i### NAME SERVER' userdata.txt
+sed -i '51i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # clear screen
 clear
