--- a/defconfig/rockchip64_defconfig
+++ b/defconfig/rockchip64_defconfig
@@ -63,7 +63,6 @@ CONFIG_CPU_FREQ_GOV_CONSERVATIVE=y
 CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPUFREQ_DT=m
 CONFIG_ARM_SCPI_CPUFREQ=y
-CONFIG_ARM_SCPI_PROTOCOL=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=y
 CONFIG_CRYPTO_SHA512_ARM64=y
@@ -518,7 +517,6 @@ CONFIG_MPLS_ROUTING=m
 CONFIG_MPLS_IPTUNNEL=m
 CONFIG_HSR=m
 CONFIG_CGROUP_NET_PRIO=y
-# CONFIG_NET_PKTGEN is not set
 CONFIG_HAMRADIO=y
 CONFIG_AX25=m
 CONFIG_NETROM=m
@@ -600,7 +598,6 @@ CONFIG_BT_ATH3K=m
 CONFIG_BT_MTKSDIO=m
 CONFIG_BT_MTKUART=m
 CONFIG_CFG80211=m
-CONFIG_CFG80211_WEXT=y
 CONFIG_MAC80211=m
 CONFIG_MAC80211_MESH=y
 CONFIG_MAC80211_LEDS=y
@@ -654,6 +651,7 @@ CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_BRCMSTB_GISB_ARB=y
 CONFIG_VEXPRESS_CONFIG=y
 CONFIG_MHI_BUS=m
+CONFIG_ARM_SCPI_PROTOCOL=y
 CONFIG_GNSS=m
 CONFIG_GNSS_MTK_SERIAL=m
 CONFIG_GNSS_SIRF_SERIAL=m
@@ -817,13 +815,7 @@ CONFIG_NET_DSA_VITESSE_VSC73XX_PLATFORM=m
 # CONFIG_NET_VENDOR_AQUANTIA is not set
 CONFIG_EMAC_ROCKCHIP=m
 # CONFIG_NET_VENDOR_ATHEROS is not set
-CONFIG_B44=m
-CONFIG_BCMGENET=m
-CONFIG_CNIC=m
-CONFIG_TIGON3=m
-CONFIG_BNX2X=m
-CONFIG_SYSTEMPORT=m
-CONFIG_BNXT=m
+# CONFIG_NET_VENDOR_BROADCOM is not set
 # CONFIG_NET_VENDOR_BROCADE is not set
 # CONFIG_NET_VENDOR_CADENCE is not set
 # CONFIG_NET_VENDOR_CAVIUM is not set
@@ -839,6 +831,7 @@ CONFIG_BNXT=m
 # CONFIG_NET_VENDOR_HUAWEI is not set
 # CONFIG_NET_VENDOR_INTEL is not set
 # CONFIG_NET_VENDOR_MICROSOFT is not set
+# CONFIG_NET_VENDOR_LITEX is not set
 # CONFIG_NET_VENDOR_MARVELL is not set
 # CONFIG_NET_VENDOR_MELLANOX is not set
 # CONFIG_NET_VENDOR_MICREL is not set
@@ -865,16 +858,18 @@ CONFIG_BNXT=m
 # CONFIG_NET_VENDOR_SILAN is not set
 # CONFIG_NET_VENDOR_SIS is not set
 # CONFIG_NET_VENDOR_SMSC is not set
-CONFIG_STMMAC_ETH=m
+# CONFIG_NET_VENDOR_SOCIONEXT is not set
+CONFIG_STMMAC_ETH=y
 CONFIG_DWMAC_DWC_QOS_ETH=m
+CONFIG_DWMAC_GENERIC=m
 # CONFIG_NET_VENDOR_SUN is not set
-# CONFIG_NET_VENDOR_SYNOPSYS is not set
+CONFIG_DWC_XLGMAC=m
+CONFIG_DWC_XLGMAC_PCI=m
 # CONFIG_NET_VENDOR_TEHUTI is not set
 # CONFIG_NET_VENDOR_TI is not set
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
 # CONFIG_NET_VENDOR_XILINX is not set
-CONFIG_PHYLIB=y
 CONFIG_LED_TRIGGER_PHY=y
 CONFIG_SFP=m
 CONFIG_AMD_PHY=m
@@ -896,6 +891,7 @@ CONFIG_NATIONAL_PHY=m
 CONFIG_AT803X_PHY=m
 CONFIG_QSEMI_PHY=m
 CONFIG_ROCKCHIP_PHY=y
+CONFIG_STE10XP=m
 CONFIG_DP83TC811_PHY=m
 CONFIG_DP83848_PHY=m
 CONFIG_DP83869_PHY=m
@@ -1204,7 +1200,6 @@ CONFIG_SPI_SLAVE_SYSTEM_CONTROL=m
 CONFIG_SPMI=y
 CONFIG_PPS_CLIENT_LDISC=m
 CONFIG_PPS_CLIENT_GPIO=m
-CONFIG_PTP_1588_CLOCK=y
 CONFIG_DP83640_PHY=m
 CONFIG_PTP_1588_CLOCK_INES=m
 CONFIG_PTP_1588_CLOCK_IDT82P33=m
@@ -1479,7 +1474,6 @@ CONFIG_ROCKCHIP_THERMAL=y
 CONFIG_WATCHDOG=y
 CONFIG_WATCHDOG_SYSFS=y
 CONFIG_SOFT_WATCHDOG=m
-CONFIG_BD70528_WATCHDOG=m
 CONFIG_RAVE_SP_WATCHDOG=m
 CONFIG_DW_WATCHDOG=y
 CONFIG_RN5T618_WATCHDOG=m
@@ -1584,7 +1578,6 @@ CONFIG_ROCKCHIP_INNO_HDMI=y
 CONFIG_ROCKCHIP_LVDS=y
 CONFIG_DRM_UDL=m
 CONFIG_DRM_RCAR_LVDS=m
-CONFIG_DRM_BOCHS=m
 CONFIG_DRM_VIRTIO_GPU=m
 CONFIG_DRM_PANEL_ARM_VERSATILE=m
 CONFIG_DRM_CDNS_DSI=m
@@ -1601,6 +1594,7 @@ CONFIG_DRM_ANALOGIX_ANX78XX=m
 CONFIG_DRM_I2C_ADV7511=m
 CONFIG_DRM_DW_HDMI_CEC=m
 CONFIG_DRM_ETNAVIV=m
+CONFIG_DRM_BOCHS=m
 CONFIG_DRM_LIMA=m
 CONFIG_DRM_PANFROST=m
 CONFIG_DRM_TIDSS=m
@@ -2091,6 +2085,7 @@ CONFIG_QCOM_HIDMA=y
 CONFIG_DW_EDMA_PCIE=m
 CONFIG_SF_PDMA=m
 CONFIG_DMABUF_SELFTESTS=m
+CONFIG_UIO=m
 CONFIG_VFIO=y
 CONFIG_VFIO_PCI=y
 CONFIG_VIRT_DRIVERS=y
@@ -2175,7 +2170,6 @@ CONFIG_ARM_SMMU_V3=y
 CONFIG_SOC_BRCMSTB=y
 CONFIG_ROCKCHIP_IODOMAIN=y
 CONFIG_ROCKCHIP_PM_DOMAINS=y
-CONFIG_VENDOR_FRIENDLYELEC=y
 CONFIG_DEVFREQ_GOV_PERFORMANCE=m
 CONFIG_DEVFREQ_GOV_POWERSAVE=m
 CONFIG_DEVFREQ_GOV_USERSPACE=m
@@ -2530,7 +2524,6 @@ CONFIG_CEPH_FSCACHE=y
 CONFIG_CEPH_FS_POSIX_ACL=y
 CONFIG_CEPH_FS_SECURITY_LABEL=y
 CONFIG_CIFS=m
-CONFIG_CIFS_WEAK_PW_HASH=y
 CONFIG_CIFS_UPCALL=y
 CONFIG_CIFS_XATTR=y
 CONFIG_CIFS_POSIX=y
