--- a/defconfig/rockchip64_defconfig
+++ b/defconfig/rockchip64_defconfig
@@ -2170,6 +2170,7 @@ CONFIG_ARM_SMMU_V3=y
 CONFIG_SOC_BRCMSTB=y
 CONFIG_ROCKCHIP_IODOMAIN=y
 CONFIG_ROCKCHIP_PM_DOMAINS=y
+CONFIG_VENDOR_FRIENDLYELEC=y
 CONFIG_DEVFREQ_GOV_PERFORMANCE=m
 CONFIG_DEVFREQ_GOV_POWERSAVE=m
 CONFIG_DEVFREQ_GOV_USERSPACE=m
