--- a/defconfig/bcm2711_defconfig
+++ b/defconfig/bcm2711_defconfig
@@ -40,7 +40,7 @@ CONFIG_ARMV8_DEPRECATED=y
 CONFIG_SWP_EMULATION=y
 CONFIG_CP15_BARRIER_EMULATION=y
 CONFIG_SETEND_EMULATION=y
-CONFIG_CMDLINE="console=ttyAMA0,115200 kgdboc=ttyAMA0,115200 root=/dev/mmcblk0p2 rootfstype=ext4 rootwait"
+CONFIG_CMDLINE=""
 # CONFIG_SUSPEND is not set
 CONFIG_PM=y
 CONFIG_CPU_IDLE=y
