--- a/defconfig/amlogic_defconfig
+++ b/defconfig/amlogic_defconfig
@@ -965,7 +965,8 @@ CONFIG_USB_RTL8153_ECM=m
 # CONFIG_WLAN_VENDOR_ATMEL is not set
 CONFIG_B43=m
 CONFIG_B43_SDIO=y
-CONFIG_B43_DEBUG=y
+# CONFIG_B43_DEBUG= is not set
+# CONFIG_B43LEGACY_DEBUG is not set
 CONFIG_B43LEGACY=m
 CONFIG_BRCMSMAC=m
 CONFIG_BRCMFMAC=m
