--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -10,7 +10,7 @@ HOSTNAME="computer"
 DISTRO="debian"
 DISTRO_VERSION="bullseye"
 UBOOT_VERSION="v2022.01"
-VERSION="5.15.24"
+VERSION="5.15.25"
 BUILD_VERSION="1"
 menuconfig="0"
 rc="0"
@@ -20,6 +20,7 @@ ccache="0"
 rtl88XXau="0"
 rtl88X2bu="0"
 rtl88XXcu="0"
+rtl8188eu="0"
 custom_defconfig="0"
 MYCONFIG=""
 
@@ -55,10 +56,11 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	"rtl88XXau:"	21 1	"$rtl88XXau"	 	21 12 2 0 \
 	"rtl88X2bu:"	22 1	"$rtl88X2bu"	 	22 12 2 0 \
 	"rtl88XXcu:"	23 1	"$rtl88XXcu"	 	23 12 2 0 \
-	""		24 1	""	 		24 14 0 0 \
-	"Customize"	25 1	""	 		25 14 0 0 \
-	"Defconfig:"	26 1	"$custom_defconfig" 	26 12 2 0 \
-	"Name:"		27 1	"$MYCONFIG"	  	27 7 27 0 \
+	"rtl8188eu:"	24 1	"$rtl8188eu"	 	24 12 2 0 \
+	""		25 1	""	 		25 14 0 0 \
+	"Customize"	26 1	""	 		26 14 0 0 \
+	"Defconfig:"	27 1	"$custom_defconfig" 	27 12 2 0 \
+	"Name:"		28 1	"$MYCONFIG"	  	28 7 27 0 \
 2>&1 1>&3)
 
 # close fd
@@ -84,6 +86,7 @@ echo ccache= >> tmp0
 echo rtl8812au= >> tmp0
 echo rtl88x2bu= >> tmp0
 echo rtl8811cu= >> tmp0
+echo rtl8188eu= >> tmp0
 echo custom_defconfig= >> tmp0
 echo MYCONFIG='"' >> tmp0
 echo emmc=0 >> tmp0
@@ -126,6 +129,7 @@ echo >> tmp2
 echo >> tmp2
 echo >> tmp2
 echo >> tmp2
+echo >> tmp2
 echo _defconfig'"' >> tmp2
 paste -d '\0' tmp0 tmp1 tmp2  > userdata.txt
 rm -f tmp0 tmp1 tmp2
@@ -135,13 +139,13 @@ sed -i '1i### USER INFORMATION' userdata.txt
 sed -i '7i### DISTRIBUTION AND RELEASE' userdata.txt
 sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
 sed -i '19i### WIRELESS' userdata.txt
-sed -i '23i### CUSTOM' userdata.txt
-sed -i '30i### COMPILER TUNING' userdata.txt
-sed -i '32i### WHOAMI AND HOST' userdata.txt
-sed -i '35i### LOCALES' userdata.txt
-sed -i '43i### TIMEZONE' userdata.txt
-sed -i '48i### NAME SERVER' userdata.txt
-sed -i '51i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '24i### CUSTOM' userdata.txt
+sed -i '31i### COMPILER TUNING' userdata.txt
+sed -i '33i### WHOAMI AND HOST' userdata.txt
+sed -i '36i### LOCALES' userdata.txt
+sed -i '44i### TIMEZONE' userdata.txt
+sed -i '49i### NAME SERVER' userdata.txt
+sed -i '52i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # clear screen
 clear
