`Moved CORES= variable to userdata.txt file`

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -93,6 +93,7 @@ echo emmc=0 >> tmp0
 echo verbose=0 >> tmp0
 echo auto=1 >> tmp0
 echo aircrack=0 >> tmp0
+echo CORES=\`nproc\` >> tmp0
 echo CFLAGS='"''"' >> tmp0
 echo KBUSER='"'marvin'"' >> tmp0
 echo KBHOST='"'martian'"' >> tmp0
@@ -109,7 +110,7 @@ echo "echo -n 'America/New_York' > /etc/timezone" >> tmp0
 echo "}" >> tmp0
 echo 'NAMESERVER1="8.8.8.8"' >> tmp0
 echo 'NAMESERVER2="8.8.4.4"' >> tmp0
-echo builder=3.3 >> tmp0
+echo builder=3.4 >> tmp0
 echo '"' > tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
@@ -141,11 +142,11 @@ sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
 sed -i '19i### WIRELESS' userdata.txt
 sed -i '24i### CUSTOM' userdata.txt
 sed -i '31i### COMPILER TUNING' userdata.txt
-sed -i '33i### WHOAMI AND HOST' userdata.txt
-sed -i '36i### LOCALES' userdata.txt
-sed -i '44i### TIMEZONE' userdata.txt
-sed -i '49i### NAME SERVER' userdata.txt
-sed -i '52i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '34i### WHOAMI AND HOST' userdata.txt
+sed -i '37i### LOCALES' userdata.txt
+sed -i '45i### TIMEZONE' userdata.txt
+sed -i '50i### NAME SERVER' userdata.txt
+sed -i '53i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # clear screen
 clear
