--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -91,7 +91,7 @@ echo custom_defconfig= >> tmp0
 echo MYCONFIG='"' >> tmp0
 echo emmc=0 >> tmp0
 echo verbose=0 >> tmp0
-echo auto=1 >> tmp0
+echo compress_img.xz=1 >> tmp0
 echo aircrack=0 >> tmp0
 echo CORES=\`nproc\` >> tmp0
 echo CFLAGS='"''"' >> tmp0
@@ -110,7 +110,7 @@ echo "echo -n 'America/New_York' > /etc/timezone" >> tmp0
 echo "}" >> tmp0
 echo 'NAMESERVER1="8.8.8.8"' >> tmp0
 echo 'NAMESERVER2="8.8.4.4"' >> tmp0
-echo builder=3.4 >> tmp0
+echo builder=3.5 >> tmp0
 echo '"' > tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
