--- a/defconfig/amlogic-old_defconfig
+++ b/defconfig/amlogic-old_defconfig
@@ -66,6 +66,9 @@ CONFIG_CPU_FREQ_GOV_SCHEDUTIL=y
 CONFIG_CPUFREQ_DT=y
 CONFIG_ARM_SCPI_CPUFREQ=y
 CONFIG_ARM_SCMI_CPUFREQ=m
+CONFIG_ARM_SCMI_PROTOCOL=y
+CONFIG_ARM_SCPI_PROTOCOL=y
+CONFIG_ARM_SDE_INTERFACE=y
 CONFIG_VIRTUALIZATION=y
 CONFIG_KVM=y
 CONFIG_CRYPTO_SHA1_ARM64_CE=y
@@ -89,6 +92,7 @@ CONFIG_MODULE_UNLOAD=y
 CONFIG_MODULE_SIG=y
 CONFIG_BLK_DEV_ZONED=y
 CONFIG_BLK_DEV_THROTTLING=y
+CONFIG_BLK_CMDLINE_PARSER=y
 CONFIG_BLK_WBT=y
 # CONFIG_BLK_DEBUG_FS is not set
 CONFIG_BLK_SED_OPAL=y
@@ -535,6 +539,7 @@ CONFIG_MPLS_IPTUNNEL=m
 CONFIG_HSR=m
 CONFIG_CGROUP_NET_PRIO=y
 CONFIG_BPF_STREAM_PARSER=y
+# CONFIG_NET_PKTGEN is not set
 CONFIG_HAMRADIO=y
 CONFIG_AX25=m
 CONFIG_NETROM=m
@@ -659,11 +664,9 @@ CONFIG_PCI_MESON=y
 CONFIG_DEVTMPFS=y
 CONFIG_DEVTMPFS_MOUNT=y
 CONFIG_DEBUG_DEVRES=y
+CONFIG_SIMPLE_PM_BUS=y
 CONFIG_VEXPRESS_CONFIG=y
 CONFIG_CONNECTOR=y
-CONFIG_ARM_SCMI_PROTOCOL=y
-CONFIG_ARM_SCPI_PROTOCOL=y
-CONFIG_ARM_SDE_INTERFACE=y
 CONFIG_MTD=y
 CONFIG_MTD_BLOCK=y
 CONFIG_MTD_CFI=y
@@ -962,8 +965,9 @@ CONFIG_USB_RTL8153_ECM=m
 # CONFIG_WLAN_VENDOR_ATMEL is not set
 CONFIG_B43=m
 CONFIG_B43_SDIO=y
-CONFIG_B43LEGACY=m
+# CONFIG_B43_DEBUG= is not set
 # CONFIG_B43LEGACY_DEBUG is not set
+CONFIG_B43LEGACY=m
 CONFIG_BRCMSMAC=m
 CONFIG_BRCMFMAC=m
 CONFIG_BRCMFMAC_USB=y
@@ -1161,6 +1165,7 @@ CONFIG_SPI_SPIDEV=m
 CONFIG_SPMI=y
 CONFIG_PPS_CLIENT_LDISC=m
 CONFIG_PPS_CLIENT_GPIO=m
+CONFIG_PTP_1588_CLOCK=y
 CONFIG_DP83640_PHY=m
 CONFIG_PINCTRL=y
 CONFIG_PINCTRL_SINGLE=y
@@ -1452,6 +1457,7 @@ CONFIG_IR_GPIO_TX=m
 CONFIG_IR_PWM_TX=m
 CONFIG_IR_SERIAL=m
 CONFIG_IR_SERIAL_TRANSMITTER=y
+CONFIG_IR_SIR=m
 CONFIG_RC_XBOX_DVD=m
 CONFIG_MEDIA_CEC_RC=y
 CONFIG_CEC_PIN_ERROR_INJ=y
@@ -1470,6 +1476,55 @@ CONFIG_DVB_DEMUX_SECTION_LOSS_LOG=y
 CONFIG_DVB_ULE_DEBUG=y
 CONFIG_MEDIA_USB_SUPPORT=y
 CONFIG_USB_VIDEO_CLASS=m
+CONFIG_USB_M5602=m
+CONFIG_USB_STV06XX=m
+CONFIG_USB_GL860=m
+CONFIG_USB_GSPCA_BENQ=m
+CONFIG_USB_GSPCA_CONEX=m
+CONFIG_USB_GSPCA_CPIA1=m
+CONFIG_USB_GSPCA_DTCS033=m
+CONFIG_USB_GSPCA_ETOMS=m
+CONFIG_USB_GSPCA_FINEPIX=m
+CONFIG_USB_GSPCA_JEILINJ=m
+CONFIG_USB_GSPCA_JL2005BCD=m
+CONFIG_USB_GSPCA_KINECT=m
+CONFIG_USB_GSPCA_KONICA=m
+CONFIG_USB_GSPCA_MARS=m
+CONFIG_USB_GSPCA_MR97310A=m
+CONFIG_USB_GSPCA_NW80X=m
+CONFIG_USB_GSPCA_OV519=m
+CONFIG_USB_GSPCA_OV534=m
+CONFIG_USB_GSPCA_OV534_9=m
+CONFIG_USB_GSPCA_PAC207=m
+CONFIG_USB_GSPCA_PAC7302=m
+CONFIG_USB_GSPCA_PAC7311=m
+CONFIG_USB_GSPCA_SE401=m
+CONFIG_USB_GSPCA_SN9C2028=m
+CONFIG_USB_GSPCA_SN9C20X=m
+CONFIG_USB_GSPCA_SONIXB=m
+CONFIG_USB_GSPCA_SONIXJ=m
+CONFIG_USB_GSPCA_SPCA500=m
+CONFIG_USB_GSPCA_SPCA501=m
+CONFIG_USB_GSPCA_SPCA505=m
+CONFIG_USB_GSPCA_SPCA506=m
+CONFIG_USB_GSPCA_SPCA508=m
+CONFIG_USB_GSPCA_SPCA561=m
+CONFIG_USB_GSPCA_SPCA1528=m
+CONFIG_USB_GSPCA_SQ905=m
+CONFIG_USB_GSPCA_SQ905C=m
+CONFIG_USB_GSPCA_SQ930X=m
+CONFIG_USB_GSPCA_STK014=m
+CONFIG_USB_GSPCA_STK1135=m
+CONFIG_USB_GSPCA_STV0680=m
+CONFIG_USB_GSPCA_SUNPLUS=m
+CONFIG_USB_GSPCA_T613=m
+CONFIG_USB_GSPCA_TOPRO=m
+CONFIG_USB_GSPCA_TOUPTEK=m
+CONFIG_USB_GSPCA_TV8532=m
+CONFIG_USB_GSPCA_VC032X=m
+CONFIG_USB_GSPCA_VICAM=m
+CONFIG_USB_GSPCA_XIRLINK_CIT=m
+CONFIG_USB_GSPCA_ZC3XX=m
 CONFIG_USB_PWC=m
 CONFIG_VIDEO_CPIA2=m
 CONFIG_USB_ZR364XX=m
@@ -1641,7 +1696,7 @@ CONFIG_FIRMWARE_EDID=y
 CONFIG_FB_TILEBLITTING=y
 CONFIG_FB_UDL=m
 CONFIG_FB_VIRTUAL=m
-CONFIG_FB_SIMPLE=m
+CONFIG_FB_SIMPLE=y
 CONFIG_FB_SSD1307=m
 CONFIG_LCD_CLASS_DEVICE=m
 CONFIG_LCD_LMS283GF05=m
@@ -1777,6 +1832,8 @@ CONFIG_HID_PICOLCD_LCD=y
 CONFIG_HID_PICOLCD_LEDS=y
 CONFIG_HID_PICOLCD_CIR=y
 CONFIG_HID_PLANTRONICS=m
+CONFIG_HID_PLAYSTATION=m
+CONFIG_PLAYSTATION_FF=y
 CONFIG_HID_PRIMAX=m
 CONFIG_HID_RETRODE=m
 CONFIG_HID_ROCCAT=m
@@ -2166,7 +2223,6 @@ CONFIG_COMMON_CLK_SCPI=y
 CONFIG_COMMON_CLK_SI544=m
 CONFIG_COMMON_CLK_CS2000_CP=y
 CONFIG_COMMON_CLK_S2MPS11=y
-CONFIG_COMMON_CLK_AXI_CLKGEN=m
 CONFIG_COMMON_CLK_XGENE=y
 CONFIG_COMMON_CLK_PWM=y
 CONFIG_HWSPINLOCK=y
@@ -2179,7 +2235,6 @@ CONFIG_ARM_SMMU_V3=y
 CONFIG_REMOTEPROC=y
 CONFIG_RPMSG_CHAR=y
 CONFIG_RPMSG_QCOM_GLINK_RPM=y
-CONFIG_MESON_CANVAS=y
 CONFIG_SOC_BRCMSTB=y
 CONFIG_DEVFREQ_GOV_PERFORMANCE=y
 CONFIG_DEVFREQ_GOV_POWERSAVE=m
@@ -2467,7 +2522,6 @@ CONFIG_TSYS01=m
 CONFIG_TSYS02D=m
 CONFIG_MAX31856=m
 CONFIG_PWM_MESON=y
-CONFIG_RESET_MESON_AUDIO_ARB=y
 CONFIG_PHY_XGENE=y
 CONFIG_PHY_CADENCE_SIERRA=m
 CONFIG_PHY_FSL_IMX8MQ_USB=m
@@ -2518,6 +2572,7 @@ CONFIG_CUSE=m
 CONFIG_OVERLAY_FS=m
 CONFIG_FSCACHE=m
 CONFIG_FSCACHE_STATS=y
+CONFIG_FSCACHE_OBJECT_LIST=y
 CONFIG_CACHEFILES=m
 CONFIG_ISO9660_FS=m
 CONFIG_JOLIET=y
@@ -2573,6 +2628,7 @@ CONFIG_CEPH_FSCACHE=y
 CONFIG_CEPH_FS_POSIX_ACL=y
 CONFIG_CIFS=m
 # CONFIG_CIFS_STATS2 is not set
+CONFIG_CIFS_WEAK_PW_HASH=y
 CONFIG_CIFS_UPCALL=y
 CONFIG_CIFS_XATTR=y
 CONFIG_CIFS_POSIX=y
