Defconfig: `allwinner sun8i`

--- a/defconfig/allwinner-sun8i_defconfig
+++ b/defconfig/allwinner-sun8i_defconfig
@@ -559,7 +559,7 @@ CONFIG_BT_MTKSDIO=m
 CONFIG_BT_MTKUART=m
 CONFIG_BT_VIRTIO=m
 CONFIG_AF_KCM=m
-CONFIG_MCTP=m
+CONFIG_MCTP=y
 CONFIG_CFG80211=m
 CONFIG_CFG80211_DEVELOPER_WARNINGS=y
 # CONFIG_CFG80211_DEFAULT_PS is not set
