--- a/defconfig/allwinner-sun8i_defconfig
+++ b/defconfig/allwinner-sun8i_defconfig
@@ -750,29 +750,47 @@ CONFIG_NET_DSA_QCA8K=m
 CONFIG_NET_DSA_REALTEK_SMI=m
 CONFIG_NET_DSA_SMSC_LAN9303_I2C=m
 CONFIG_NET_DSA_SMSC_LAN9303_MDIO=m
+# CONFIG_NET_VENDOR_ALACRITECH is not set
 CONFIG_SUN4I_EMAC=y
+# CONFIG_NET_VENDOR_AMAZON is not set
+# CONFIG_NET_VENDOR_AQUANTIA is not set
 # CONFIG_NET_VENDOR_ARC is not set
 # CONFIG_NET_VENDOR_BROADCOM is not set
+# CONFIG_NET_VENDOR_CADENCE is not set
+# CONFIG_NET_VENDOR_CAVIUM is not set
 # CONFIG_NET_VENDOR_CIRRUS is not set
+# CONFIG_NET_VENDOR_CORTINA is not set
+# CONFIG_NET_VENDOR_EZCHIP is not set
 # CONFIG_NET_VENDOR_FARADAY is not set
-CONFIG_HIP04_ETH=m
+# CONFIG_NET_VENDOR_GOOGLE is not set
+# CONFIG_NET_VENDOR_HISILICON is not set
+# CONFIG_NET_VENDOR_HUAWEI is not set
 # CONFIG_NET_VENDOR_INTEL is not set
-CONFIG_LITEX_LITEETH=m
+# CONFIG_NET_VENDOR_MICROSOFT is not set
+# CONFIG_NET_VENDOR_LITEX is not set
 # CONFIG_NET_VENDOR_MARVELL is not set
+# CONFIG_NET_VENDOR_MELLANOX is not set
 # CONFIG_NET_VENDOR_MICREL is not set
-CONFIG_ENC28J60=m
-CONFIG_ENC28J60_WRITEVERIFY=y
+# CONFIG_NET_VENDOR_MICROCHIP is not set
+# CONFIG_NET_VENDOR_MICROSEMI is not set
 # CONFIG_NET_VENDOR_NATSEMI is not set
-CONFIG_NI_XGE_MANAGEMENT_ENET=m
+# CONFIG_NET_VENDOR_NETRONOME is not set
+# CONFIG_NET_VENDOR_NI is not set
+# CONFIG_NET_VENDOR_PENSANDO is not set
+# CONFIG_NET_VENDOR_QUALCOMM is not set
+# CONFIG_NET_VENDOR_RENESAS is not set
+# CONFIG_NET_VENDOR_ROCKER is not set
 # CONFIG_NET_VENDOR_SAMSUNG is not set
 # CONFIG_NET_VENDOR_SEEQ is not set
+# CONFIG_NET_VENDOR_SOLARFLARE is not set
 # CONFIG_NET_VENDOR_SMSC is not set
+# CONFIG_NET_VENDOR_SOCIONEXT is not set
 CONFIG_STMMAC_ETH=y
 CONFIG_DWMAC_DWC_QOS_ETH=m
+# CONFIG_NET_VENDOR_SYNOPSYS is not set
 # CONFIG_NET_VENDOR_VIA is not set
 # CONFIG_NET_VENDOR_WIZNET is not set
-CONFIG_XILINX_EMACLITE=m
-CONFIG_XILINX_LL_TEMAC=m
+# CONFIG_NET_VENDOR_XILINX is not set
 CONFIG_LED_TRIGGER_PHY=y
 CONFIG_AMD_PHY=m
 CONFIG_ADIN_PHY=m
@@ -784,6 +802,7 @@ CONFIG_DAVICOM_PHY=m
 CONFIG_ICPLUS_PHY=m
 CONFIG_LXT_PHY=m
 CONFIG_LSI_ET1011C_PHY=m
+CONFIG_MARVELL_PHY=m
 CONFIG_MARVELL_88X2222_PHY=m
 CONFIG_MAXLINEAR_GPHY=m
 CONFIG_MICREL_PHY=m
@@ -1691,11 +1710,11 @@ CONFIG_SND_SOC_SOF_FORCE_NOCODEC_MODE=y
 CONFIG_SND_SOC_SOF_DEBUG_XRUN_STOP=y
 CONFIG_SND_SOC_SOF_DEBUG_VERBOSE_IPC=y
 CONFIG_SND_SOC_SOF_DEBUG_FORCE_IPC_POSITION=y
-CONFIG_SND_SUN4I_CODEC=y
-CONFIG_SND_SUN8I_CODEC=y
-CONFIG_SND_SUN8I_CODEC_ANALOG=y
-CONFIG_SND_SUN4I_I2S=y
-CONFIG_SND_SUN4I_SPDIF=y
+CONFIG_SND_SUN4I_CODEC=m
+CONFIG_SND_SUN8I_CODEC=m
+CONFIG_SND_SUN8I_CODEC_ANALOG=m
+CONFIG_SND_SUN4I_I2S=m
+CONFIG_SND_SUN4I_SPDIF=m
 CONFIG_SND_SOC_XILINX_I2S=m
 CONFIG_SND_SOC_XILINX_AUDIO_FORMATTER=m
 CONFIG_SND_SOC_XILINX_SPDIF=m
@@ -2670,13 +2689,3 @@ CONFIG_WW_MUTEX_SELFTEST=m
 CONFIG_FUNCTION_TRACER=y
 # CONFIG_UPROBE_EVENTS is not set
 # CONFIG_STRICT_DEVMEM is not set
-# CONFIG_TEST_MIN_HEAP= is not set
-# CONFIG_TEST_DIV64= is not set
-# CONFIG_TEST_HEXDUMP= is not set
-# CONFIG_TEST_STRSCPY= is not set
-# CONFIG_TEST_SCANF= is not set
-# CONFIG_TEST_XARRAY= is not set
-# CONFIG_TEST_OVERFLOW= is not set
-# CONFIG_TEST_IDA= is not set
-# CONFIG_TEST_VMALLOC= is not set
-# CONFIG_TEST_MEMCAT_P= is not set
