--- a/defconfig/allwinner-sun8i_defconfig
+++ b/defconfig/allwinner-sun8i_defconfig
@@ -1701,20 +1701,20 @@ CONFIG_SND_SOC_IMG_PISTACHIO_INTERNAL_DAC=m
 CONFIG_SND_SOC_MTK_BTCVSD=m
 CONFIG_SND_SOC_SOF_TOPLEVEL=y
 CONFIG_SND_SOC_SOF_OF=m
-CONFIG_SND_SOC_SOF_DEBUG_PROBES=y
+# CONFIG_SND_SOC_SOF_DEBUG_PROBES= is not set
 CONFIG_SND_SOC_SOF_DEVELOPER_SUPPORT=y
 CONFIG_SND_SOC_SOF_NOCODEC_SUPPORT=y
 CONFIG_SND_SOC_SOF_STRICT_ABI_CHECKS=y
-CONFIG_SND_SOC_SOF_DEBUG=y
+# CONFIG_SND_SOC_SOF_DEBUG= is not set
 CONFIG_SND_SOC_SOF_FORCE_NOCODEC_MODE=y
-CONFIG_SND_SOC_SOF_DEBUG_XRUN_STOP=y
-CONFIG_SND_SOC_SOF_DEBUG_VERBOSE_IPC=y
-CONFIG_SND_SOC_SOF_DEBUG_FORCE_IPC_POSITION=y
-CONFIG_SND_SUN4I_CODEC=m
-CONFIG_SND_SUN8I_CODEC=m
-CONFIG_SND_SUN8I_CODEC_ANALOG=m
-CONFIG_SND_SUN4I_I2S=m
-CONFIG_SND_SUN4I_SPDIF=m
+# CONFIG_SND_SOC_SOF_DEBUG_XRUN_STOP= is not set
+# CONFIG_SND_SOC_SOF_DEBUG_VERBOSE_IPC= is not set
+# CONFIG_SND_SOC_SOF_DEBUG_FORCE_IPC_POSITION= is not set
+CONFIG_SND_SUN4I_CODEC=y
+CONFIG_SND_SUN8I_CODEC=y
+CONFIG_SND_SUN8I_CODEC_ANALOG=y
+CONFIG_SND_SUN4I_I2S=y
+CONFIG_SND_SUN4I_SPDIF=y
 CONFIG_SND_SOC_XILINX_I2S=m
 CONFIG_SND_SOC_XILINX_AUDIO_FORMATTER=m
 CONFIG_SND_SOC_XILINX_SPDIF=m
