Menu Interface: `maintenance`

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -149,7 +149,7 @@ sed -i '50i### NAME SERVER' userdata.txt
 sed -i '53i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # clear screen
-clear
+clear -x
 
 # userdata
 echo -e "${RED}userdata file created${FIN}."
