Change to add logging when using make menu

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -93,6 +93,7 @@ echo emmc=0 >> tmp0
 echo verbose=0 >> tmp0
 echo compress_img.xz=1 >> tmp0
 echo aircrack=0 >> tmp0
+echo logging=0 >> tmp0
 echo CORES=\`nproc\` >> tmp0
 echo CFLAGS='"''"' >> tmp0
 echo KBUSER='"'marvin'"' >> tmp0
@@ -141,12 +142,12 @@ sed -i '7i### DISTRIBUTION AND RELEASE' userdata.txt
 sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
 sed -i '19i### WIRELESS' userdata.txt
 sed -i '24i### CUSTOM' userdata.txt
-sed -i '31i### COMPILER TUNING' userdata.txt
-sed -i '34i### WHOAMI AND HOST' userdata.txt
-sed -i '37i### LOCALES' userdata.txt
-sed -i '45i### TIMEZONE' userdata.txt
-sed -i '50i### NAME SERVER' userdata.txt
-sed -i '53i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '32i### COMPILER TUNING' userdata.txt
+sed -i '35i### WHOAMI AND HOST' userdata.txt
+sed -i '38i### LOCALES' userdata.txt
+sed -i '46i### TIMEZONE' userdata.txt
+sed -i '51i### NAME SERVER' userdata.txt
+sed -i '54i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # clear screen
 clear -x
