Moved: `logging, verbose and compress_img into make config`

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -10,7 +10,7 @@ HOSTNAME="computer"
 DISTRO="debian"
 DISTRO_VERSION="bullseye"
 UBOOT_VERSION="v2022.01"
-VERSION="5.15.32"
+VERSION="5.15.33"
 BUILD_VERSION="1"
 menuconfig="0"
 rc="0"
@@ -23,6 +23,9 @@ rtl88XXcu="0"
 rtl8188eu="0"
 custom_defconfig="0"
 MYCONFIG=""
+logging="0"
+verbose="0"
+compress_img="1"
 
 # open fd
 exec 3>&1
@@ -61,6 +64,11 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	"Customize"	26 1	""	 		26 14 0 0 \
 	"Defconfig:"	27 1	"$custom_defconfig" 	27 12 2 0 \
 	"Name:"		28 1	"$MYCONFIG"	  	28 7 27 0 \
+	""		29 1	""	 		29 14 0 0 \
+	"User options"	30 1	""	 		30 14 0 0 \
+	"Logging:"	31 1	"$logging"	 	31 10 2 0 \
+	"Verbosity:"	32 1	"$verbose"	 	32 12 2 0 \
+	"Compress img:"	33 1	"$compress_img" 	33 15 2 0 \
 2>&1 1>&3)
 
 # close fd
@@ -89,11 +97,11 @@ echo rtl8811cu= >> tmp0
 echo rtl8188eu= >> tmp0
 echo custom_defconfig= >> tmp0
 echo MYCONFIG='"' >> tmp0
+echo logging= >> tmp0
+echo verbose= >> tmp0
+echo compress_img= >> tmp0
 echo emmc=0 >> tmp0
-echo verbose=0 >> tmp0
-echo compress_img.xz=1 >> tmp0
 echo aircrack=0 >> tmp0
-echo logging=0 >> tmp0
 echo CORES=\`nproc\` >> tmp0
 echo CFLAGS='"''"' >> tmp0
 echo KBUSER='"'marvin'"' >> tmp0
