`Debian Image Builder`
Makefile: make sure scripts are executable
RootfsXL: moved into make menu and script renamed (testing)
Misc: aesthetics

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -25,7 +25,8 @@ custom_defconfig="0"
 MYCONFIG=""
 logging="0"
 verbose="0"
-compress_img="1"
+rootfsxl="0"
+compress_img="0"
 
 # open fd
 exec 3>&1
@@ -65,10 +66,11 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	"Defconfig:"	27 1	"$custom_defconfig" 	27 12 2 0 \
 	"Name:"		28 1	"$MYCONFIG"	  	28 7 27 0 \
 	""		29 1	""	 		29 14 0 0 \
-	"User options"	30 1	""	 		30 14 0 0 \
+	"User Options"	30 1	""	 		30 14 0 0 \
 	"Logging:"	31 1	"$logging"	 	31 10 2 0 \
 	"Verbosity:"	32 1	"$verbose"	 	32 12 2 0 \
-	"Compress img:"	33 1	"$compress_img" 	33 15 2 0 \
+	"Rootfs XL:"	33 1	"$rootfsxl"	 	33 12 2 0 \
+	"Compress img:"	34 1	"$compress_img" 	34 15 2 0 \
 2>&1 1>&3)
 
 # close fd
@@ -99,10 +101,10 @@ echo custom_defconfig= >> tmp0
 echo MYCONFIG='"' >> tmp0
 echo logging= >> tmp0
 echo verbose= >> tmp0
+echo rootfsxl= >> tmp0
 echo compress_img= >> tmp0
 echo emmc=0 >> tmp0
 echo aircrack=0 >> tmp0
-echo rootfsxl=0 >> tmp0
 echo CORES=\`nproc\` >> tmp0
 echo CFLAGS='"''"' >> tmp0
 echo KBUSER='"'marvin'"' >> tmp0
