--- a/defconfig/allwinner-sun8i_defconfig
+++ b/defconfig/allwinner-sun8i_defconfig
@@ -567,7 +567,7 @@ CONFIG_LIB80211_DEBUG=y
 CONFIG_MAC80211=m
 CONFIG_MAC80211_MESH=y
 CONFIG_MAC80211_LEDS=y
-CONFIG_RFKILL=m
+CONFIG_RFKILL=y
 CONFIG_RFKILL_INPUT=y
 CONFIG_RFKILL_GPIO=m
 CONFIG_NFC=m
