--- a/defconfig/rockchip64_defconfig
+++ b/defconfig/rockchip64_defconfig
@@ -80,6 +80,7 @@ CONFIG_CRYPTO_AES_ARM64_BS=y
 CONFIG_JUMP_LABEL=y
 CONFIG_MODULES=y
 CONFIG_MODULE_UNLOAD=y
+CONFIG_MODULE_COMPRESS_XZ=y
 CONFIG_BLK_DEV_ZONED=y
 CONFIG_BLK_DEV_THROTTLING=y
 CONFIG_BLK_WBT=y
@@ -601,7 +602,7 @@ CONFIG_CFG80211=m
 CONFIG_MAC80211=m
 CONFIG_MAC80211_MESH=y
 CONFIG_MAC80211_LEDS=y
-CONFIG_RFKILL=m
+CONFIG_RFKILL=y
 CONFIG_RFKILL_INPUT=y
 CONFIG_RFKILL_GPIO=m
 CONFIG_NET_9P=m
@@ -863,8 +864,7 @@ CONFIG_STMMAC_ETH=y
 CONFIG_DWMAC_DWC_QOS_ETH=m
 CONFIG_DWMAC_GENERIC=m
 # CONFIG_NET_VENDOR_SUN is not set
-CONFIG_DWC_XLGMAC=m
-CONFIG_DWC_XLGMAC_PCI=m
+# CONFIG_NET_VENDOR_SYNOPSYS is not set
 # CONFIG_NET_VENDOR_TEHUTI is not set
 # CONFIG_NET_VENDOR_TI is not set
 # CONFIG_NET_VENDOR_VIA is not set
@@ -955,22 +955,17 @@ CONFIG_USB_NET_AQC111=m
 # CONFIG_WLAN_VENDOR_ATMEL is not set
 CONFIG_B43=m
 CONFIG_B43LEGACY=m
+# CONFIG_B43LEGACY_DEBUG is not set
 CONFIG_BRCMSMAC=m
 CONFIG_BRCMFMAC=m
 CONFIG_BRCMFMAC_USB=y
 CONFIG_BRCMFMAC_PCIE=y
 CONFIG_BRCM_TRACING=y
-CONFIG_BRCMDBG=y
 # CONFIG_WLAN_VENDOR_CISCO is not set
 # CONFIG_WLAN_VENDOR_INTEL is not set
 # CONFIG_WLAN_VENDOR_INTERSIL is not set
 # CONFIG_WLAN_VENDOR_MARVELL is not set
-CONFIG_MT7601U=m
-CONFIG_MT76x0U=m
-CONFIG_MT76x2U=m
-CONFIG_MT7615E=m
-CONFIG_MT7663U=m
-CONFIG_MT7663S=m
+# CONFIG_WLAN_VENDOR_MEDIATEK is not set
 # CONFIG_WLAN_VENDOR_MICROCHIP is not set
 CONFIG_RT2X00=m
 CONFIG_RT2500USB=m
@@ -2636,9 +2631,6 @@ CONFIG_CRYPTO_BLAKE2S=m
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_MICHAEL_MIC=y
 CONFIG_CRYPTO_RMD160=y
-CONFIG_CRYPTO_RNG=y
-CONFIG_CRYPTO_RNG2=y
-CONFIG_CRYPTO_RNG_DEFAULT=y
 CONFIG_CRYPTO_SHA3=y
 CONFIG_CRYPTO_WP512=y
 CONFIG_CRYPTO_AES_TI=y
