Rockchip: `RK3399 HWRNG`

--- a/defconfig/rockchip64_defconfig
+++ b/defconfig/rockchip64_defconfig
@@ -2631,6 +2631,9 @@ CONFIG_CRYPTO_BLAKE2S=m
 CONFIG_CRYPTO_MD4=y
 CONFIG_CRYPTO_MICHAEL_MIC=y
 CONFIG_CRYPTO_RMD160=y
+CONFIG_CRYPTO_RNG=y
+CONFIG_CRYPTO_RNG2=y
+CONFIG_CRYPTO_RNG_DEFAULT=y
 CONFIG_CRYPTO_SHA3=y
 CONFIG_CRYPTO_WP512=y
 CONFIG_CRYPTO_AES_TI=y
