`ASCII text banner`
Set a custom one or leave at default to let the builder choose

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -5,7 +5,7 @@ FIN="\e[0m"
 NAME=""
 user=""
 passwd=""
-MOTD="Debian"
+MOTD="default"
 HOSTNAME="computer"
 DISTRO="debian"
 DISTRO_VERSION="bullseye"
