Hostname: `default or custom`

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -14,7 +14,7 @@ else
 	USER_NAMESERVER2="8.8.4.4";
 fi
 MOTD="default"
-HOSTNAME="computer"
+HOSTNAME="default"
 DISTRO="debian"
 DISTRO_VERSION="bullseye"
 UBOOT_VERSION="v2022.01"
