make config: `maintenance`

--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -18,7 +18,7 @@ HOSTNAME="default"
 DISTRO="debian"
 DISTRO_VERSION="bullseye"
 UBOOT_VERSION="v2022.01"
-VERSION="5.15.33"
+VERSION="5.15.34"
 BUILD_VERSION="1"
 menuconfig="0"
 rc="0"
@@ -43,7 +43,7 @@ exec 3>&1
 VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	  --backtitle "Debian Image Builder" \
 	  --title "Config Menu" \
-	  --form "Choose:" \
+	  --form "" \
 0 40 0 \
 	"Name:"		1 1	"$NAME"			1 7 26 0 \
 	"Username:"	2 1	"$USERNAME"		2 11 22 0 \
