--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -35,6 +35,7 @@ logging="0"
 verbose="0"
 rootfsxl="0"
 compress_img="0"
+uscripts="0"
 
 # open fd
 exec 3>&1
@@ -79,6 +80,7 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	"Verbosity:"	32 1	"$verbose"		32 12 2 0 \
 	"Rootfs XL:"	33 1	"$rootfsxl"		33 12 2 0 \
 	"Compress img:"	34 1	"$compress_img"		34 15 2 0 \
+	"User scripts:"	35 1	"$uscripts"		35 15 2 0 \
 2>&1 1>&3)
 
 # close fd
@@ -111,6 +113,7 @@ echo logging= >> tmp0
 echo verbose= >> tmp0
 echo rootfsxl= >> tmp0
 echo compress_img= >> tmp0
+echo uscripts= >> tmp0
 echo emmc=0 >> tmp0
 echo aircrack=0 >> tmp0
 echo CORES=\`nproc\` >> tmp0
@@ -130,7 +133,7 @@ echo "echo -n '${TIMEZONE}' > /etc/timezone" >> tmp0
 echo "}" >> tmp0
 echo NAMESERVER1='"'${USER_NAMESERVER1}'"' >> tmp0
 echo NAMESERVER2='"'${USER_NAMESERVER2}'"' >> tmp0
-echo builder=3.8 >> tmp0
+echo builder=3.9 >> tmp0
 echo '"' > tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
@@ -161,12 +164,12 @@ sed -i '7i### DISTRIBUTION AND RELEASE' userdata.txt
 sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
 sed -i '19i### WIRELESS' userdata.txt
 sed -i '24i### CUSTOM' userdata.txt
-sed -i '33i### COMPILER TUNING' userdata.txt
-sed -i '36i### WHOAMI AND HOST' userdata.txt
-sed -i '39i### LOCALES' userdata.txt
-sed -i '47i### TIMEZONE' userdata.txt
-sed -i '52i### NAME SERVER' userdata.txt
-sed -i '55i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '34i### COMPILER TUNING' userdata.txt
+sed -i '37i### WHOAMI AND HOST' userdata.txt
+sed -i '40i### LOCALES' userdata.txt
+sed -i '48i### TIMEZONE' userdata.txt
+sed -i '53i### NAME SERVER' userdata.txt
+sed -i '56i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # clear screen
 clear -x
