--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -114,6 +114,7 @@ echo verbose= >> tmp0
 echo rootfsxl= >> tmp0
 echo compress_img= >> tmp0
 echo uscripts= >> tmp0
+echo useracct=0 >> tmp0
 echo emmc=0 >> tmp0
 echo aircrack=0 >> tmp0
 echo CORES=\`nproc\` >> tmp0
@@ -133,7 +134,7 @@ echo "echo -n '${TIMEZONE}' > /etc/timezone" >> tmp0
 echo "}" >> tmp0
 echo NAMESERVER1='"'${USER_NAMESERVER1}'"' >> tmp0
 echo NAMESERVER2='"'${USER_NAMESERVER2}'"' >> tmp0
-echo builder=3.9 >> tmp0
+echo builder=4.0 >> tmp0
 echo '"' > tmp2
 echo '"' >> tmp2
 echo '"' >> tmp2
@@ -164,12 +165,12 @@ sed -i '7i### DISTRIBUTION AND RELEASE' userdata.txt
 sed -i '10i### UBOOT AND LINUX KERNEL' userdata.txt
 sed -i '19i### WIRELESS' userdata.txt
 sed -i '24i### CUSTOM' userdata.txt
-sed -i '34i### COMPILER TUNING' userdata.txt
-sed -i '37i### WHOAMI AND HOST' userdata.txt
-sed -i '40i### LOCALES' userdata.txt
-sed -i '48i### TIMEZONE' userdata.txt
-sed -i '53i### NAME SERVER' userdata.txt
-sed -i '56i### DO NOT EDIT BELOW THIS LINE' userdata.txt
+sed -i '35i### COMPILER TUNING' userdata.txt
+sed -i '38i### WHOAMI AND HOST' userdata.txt
+sed -i '41i### LOCALES' userdata.txt
+sed -i '49i### TIMEZONE' userdata.txt
+sed -i '54i### NAME SERVER' userdata.txt
+sed -i '57i### DO NOT EDIT BELOW THIS LINE' userdata.txt
 
 # clear screen
 clear -x
