--- a/lib/dialog/config
+++ b/lib/dialog/config
@@ -36,6 +36,7 @@ verbose="0"
 rootfsxl="0"
 compress_img="0"
 uscripts="0"
+useracct="0"
 
 # open fd
 exec 3>&1
@@ -81,6 +82,7 @@ VALUES=$(dialog --ok-label "Submit" --no-cancel \
 	"Rootfs XL:"	33 1	"$rootfsxl"		33 12 2 0 \
 	"Compress img:"	34 1	"$compress_img"		34 15 2 0 \
 	"User scripts:"	35 1	"$uscripts"		35 15 2 0 \
+	"User service:"	36 1	"$useracct"		36 15 2 0 \
 2>&1 1>&3)
 
 # close fd
@@ -114,7 +116,7 @@ echo verbose= >> tmp0
 echo rootfsxl= >> tmp0
 echo compress_img= >> tmp0
 echo uscripts= >> tmp0
-echo useracct=0 >> tmp0
+echo useracct= >> tmp0
 echo emmc=0 >> tmp0
 echo aircrack=0 >> tmp0
 echo CORES=\`nproc\` >> tmp0
