--- a/defconfig/odroid_defconfig
+++ b/defconfig/odroid_defconfig
@@ -2484,6 +2484,13 @@ CONFIG_MESON_EFUSE=y
 CONFIG_MESON_MX_EFUSE=y
 CONFIG_MUX_GPIO=y
 CONFIG_VALIDATE_FS_PARSER=y
+CONFIG_EXT2_FS=y
+CONFIG_EXT2_FS_XATTR=y
+CONFIG_EXT2_FS_POSIX_ACL=y
+CONFIG_EXT2_FS_SECURITY=y
+CONFIG_EXT3_FS=y
+CONFIG_EXT3_FS_POSIX_ACL=y
+CONFIG_EXT3_FS_SECURITY=y
 CONFIG_EXT4_FS=y
 CONFIG_EXT4_FS_POSIX_ACL=y
 CONFIG_EXT4_FS_SECURITY=y
